# django-b3-monitor

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  bandit.yaml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
locale/pt_BR/LC_MESSAGES/: django.po
scripts/: before_migrate.sh
src/app/: apps.py  urls.py
src/app/admin/: site.py
src/app/celery/: app.py
src/app/models/: __init__.py  base.py
src/app/settings/: conf.py
src/app/templates/admin/: index.html
src/app/validators/: doc.py
src/stocks/: admin.py  apps.py  models.py  services.py  tasks.py
src/stocks/migrations/: 0001_initial.py
src/stocks/templates/email/: stock_monitoring.html  stock_monitoring.txt
src/users/: admin.py  consts.py  models.py  services.py
src/users/migrations/: 0001_initial.py
