[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
allow_redefinition = true

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings.conf"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.scripts]
_.env_file = ".env"
collectstatic.cmd = "python manage.py collectstatic --noinput"
makemigrations.cmd = "python manage.py makemigrations"
migrate.cmd = "python manage.py migrate"
server.cmd = "python manage.py runserver"
createsuperuser.cmd = "python manage.py createsuperuser"
makemessages.shell = "cd src && pdm run python manage.py makemessages"
compilemessages.shell = "cd src && pdm run python manage.py compilemessages"

[tool.pdm.dev-dependencies]
dev = [
    "black==23.3.0",
    "mypy==1.3.0",
    "django-debug-toolbar==4.1",
    "isort==5.12.0",
    "types-requests==2.31.0.1",
    "django-stubs[compatible-mypy]==4.2.1",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "B3-monitor"
version = "0.1.0"
description = "B3 Monitor"
authors = [
    {name = "Victória Fabris", email = "vicfabriss@gmail.com"},
]
dependencies = [
    "Django==4.2",
    "djangorestframework==3.14.0",
    "celery[redis]==5.3.0",
    "django-environ==0.10.0",
    "django-jazzmin==2.6.0",
    "django-cors-headers>=4.3.1",
    "psycopg2-binary==2.9.6",
    "djangorestframework-simplejwt==5.2.2",
    "validate-docbr==1.10.0",
    "django-storages==1.13.2",
    "gunicorn==20.1.0",
    "requests==2.31.0",
    "django-extensions==3.2.3",
    "werkzeug==2.3.7",
    "beautifulsoup4>=4.12.2",
    "apscheduler>=3.10.4",
]
requires-python = ">=3.11"
license = {text = "MIT"}
